--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,6 +20,7 @@ body {
 div#wrapper {
   width: 100%;
   max-width: 1920px;
+  overflow: hidden;
   height: auto;
   margin: 0 auto;
   position: relative;
