--- a/scss/style.scss
+++ b/scss/style.scss
@@ -60,12 +60,13 @@ section {
   top: 0;
 }
 
-.title_wrap {
-  width: auto;
-  height: auto;
-  border: solid 2px palevioletred;
-  box-sizing: border-box;
-  p.subtitle {
-    font: normal 3rem "Dela Gothic One";
-  }
-}
+// .title_wrap {
+//   width: auto;
+//   height: auto;
+//   p.subtitle {
+//     font: normal 3rem "Dela Gothic One";
+//   }
+//   svg {
+//     padding-top: 0.2rem;
+//   }
+// }
