--- a/css/about_me_section.css
+++ b/css/about_me_section.css
@@ -1,17 +1,97 @@
+div#about_me_wrapper .title_wrap {
+  width: auto;
+  height: auto;
+}
+div#about_me_wrapper .title_wrap p.subtitle {
+  font: normal 3rem "Dela Gothic One";
+}
+div#about_me_wrapper .title_wrap svg {
+  padding-top: 0.2rem;
+}
+
 div#about_me_wrapper {
+  width: 100%;
+  margin: 0 auto;
+  height: auto;
+  position: relative;
+  background: #003CFF;
+}
+div#about_me_wrapper .title_wrap {
+  width: 18rem;
+  text-align: left;
+  margin-top: 6rem;
+}
+div#about_me_wrapper .title_wrap #aboutme {
+  color: white;
+}
+
+div.about_me_inner {
   max-width: 1200px;
+  padding: 1rem 0;
   margin: 0 auto;
   height: auto;
   position: relative;
   left: 0;
   top: 0;
-  border: solid 2px red;
-  box-sizing: border-box;
-  background: #003CFF;
 }
-div#about_me_wrapper .title_wrap {
-  text-align: left;
+div.about_me_inner div.categories_wrapper {
+  margin-top: 4rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  gap: 5rem;
 }
-div#about_me_wrapper .title_wrap #aboutme {
+div.about_me_inner div.categories_wrapper p.am_c_title {
   color: white;
+  font: normal 1.875rem "Noto sans KR";
+}
+div.about_me_inner div.categories_wrapper ul.am_category_list {
+  margin-top: 2rem;
+}
+div.about_me_inner div.categories_wrapper ul.am_category_list li {
+  color: white;
+  font: normal 1rem "Noto sans KR";
+}
+div.about_me_inner div.categories_wrapper ul.am_category_list li p {
+  font: normal 1.25rem "Noto sans KR";
+  padding-bottom: 1rem;
+}
+div.about_me_inner div.categories_wrapper ul.am_category_list li p span {
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+p.am_c_subtitle {
+  width: 35rem;
+  height: 3.5rem;
+  margin-top: 1rem;
+  color: white;
+  font: normal 1rem/1.7rem "Noto sans KR";
+}
+
+div.interests {
+  padding-bottom: 10rem;
+}
+div.interests p {
+  margin-top: 2.6rem;
+  color: white;
+  font: normal 1.125rem "Noto sans KR";
+}
+div.interests ul#hobbies_list {
+  margin-top: 2rem;
+  width: 30rem;
+  height: 10rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+  align-content: flex-start;
+}
+div.interests ul#hobbies_list li {
+  width: 8rem;
+  padding-bottom: 1.5rem;
+  color: white;
+  font: normal 0.9rem "Noto sans KR";
 }
