--- a/scss/basic_information_section.scss
+++ b/scss/basic_information_section.scss
@@ -1,3 +1,6 @@
+@use 'common';
+$max_width: 1400px;
+
 div#basic_information_wrapper {
   width: 100%;
   height: 72rem;
@@ -70,6 +73,8 @@ div#basic_information_wrapper {
     div.my_pic {
       width: 30vw;
       height: 44.22vw;
+      max-width: 24.375rem;
+      max-height: 35.9375rem;
       position: absolute;
       right: 0;
       top: 0;
@@ -78,6 +83,8 @@ div#basic_information_wrapper {
       img {
         width: 30vw;
         height: 44.22vw;
+        max-width: 24.375rem;
+        max-height: 35.9375rem;
         object-fit: contain;
         position: absolute;
         right: 0;
@@ -86,12 +93,22 @@ div#basic_information_wrapper {
       .img_blue_cover{
         width: calc(100% - 4vw);
         height: calc(44.22vw - 4vw);
+        max-width: 21.875rem;
+        max-height: 32.75rem;
         background: #003CFF;
         mix-blend-mode: lighten;
         position: absolute;
         left: 2vw;
         top: 2vw;
         z-index: 3;
+
+        @media (min-width: #{$max_width}) {
+          width: calc(24.375rem - 60px);
+          height: calc(35.9375rem - 60px);
+          max-height: 32.75rem;
+          left: 30px;
+          top: 30px;
+        }
       }
       .bi_bg_circle_yellow {
         width: 49rem;
