--- a/css/main_section.css
+++ b/css/main_section.css
@@ -1,6 +1,6 @@
 div#main_wrapper {
   width: 100%;
-  height: auto;
+  height: 55rem;
   position: relative;
   left: 0;
   top: 0;
@@ -10,12 +10,13 @@ div#main_wrapper {
 div#main_wrapper .title {
   width: 100%;
   height: auto;
+  margin-top: 10rem;
   text-align: center;
   border: solid 2px palevioletred;
   box-sizing: border-box;
 }
 div#main_wrapper .title p {
-  font: normal 12.5rem "Permanent Marker";
+  font: normal 12.5rem "Faster One";
   line-height: 13.5625rem;
   letter-spacing: 1.0625rem;
   color: #003CFF;
