--- a/css/my_projects_section.css
+++ b/css/my_projects_section.css
@@ -10,6 +10,15 @@ div.project_orange_stage_wrapper {
   top: 0;
 }
 
+div.projects_list_wrapper {
+  max-width: 1200px;
+  margin: 0 auto;
+  height: auto;
+  position: relative;
+  left: 0;
+  top: 0;
+}
+
 div#projects_wrapper .title_wrap {
   width: auto;
   height: auto;
@@ -61,6 +70,12 @@ div.project_view_wrapper div.project_main_pic {
   float: left;
   border: solid 2px green;
   box-sizing: border-box;
+}
+div.project_view_wrapper div.project_main_pic img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: contain;
+     object-fit: contain;
 }
 div.project_view_wrapper div.project_infos {
   width: calc(100% - 31rem);
@@ -128,4 +143,35 @@ div.project_view_wrapper div.project_infos div.project_links ul a:hover li {
   transform: scale(1.05);
   border-radius: 1rem;
   color: white;
+}
+
+div.projects_list_wrapper {
+  border: solid 2px palevioletred;
+  box-sizing: border-box;
+}
+div.projects_list_wrapper div.projects_list {
+  width: 100%;
+  height: 40rem;
+}
+div.projects_list_wrapper div.projects_list ul {
+  width: 2000px;
+  height: auto;
+  margin-top: 4.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: flex-start;
+  align-content: center;
+  gap: 4rem;
+}
+div.projects_list_wrapper div.projects_list ul li {
+  width: 25rem;
+  height: 19rem;
+  background: #FFF;
+  box-shadow: 4px 4px 10px 4px rgba(0, 0, 0, 0.15);
+}
+div.projects_list_wrapper div.projects_list ul li.selected {
+  border: 10px solid #F90;
+  transform: translateY(-10px);
+  box-shadow: none;
 }
