--- a/scss/main_section.scss
+++ b/scss/main_section.scss
@@ -1,6 +1,6 @@
 div#main_wrapper {
   width: 100%;
-  height: auto;
+  height: 55rem;
   position: relative;
   left: 0;
   top: 0;
@@ -9,11 +9,12 @@ div#main_wrapper {
   .title {
     width: 100%;
     height: auto;
+    margin-top: 10rem;
     text-align: center;
     border: solid 2px palevioletred;
     box-sizing: border-box;
     p {
-      font: normal 12.5rem "Permanent Marker";
+      font: normal 12.5rem "Faster One";
       line-height: 13.5625rem;
       letter-spacing: 1.0625rem;
       color: #003CFF;
