--- a/scss/my_projects_section.scss
+++ b/scss/my_projects_section.scss
@@ -43,6 +43,12 @@ div.project_view_wrapper {
     float: left;
     border: solid 2px green;
     box-sizing: border-box;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: contain;
+    }
+
   }
   div.project_infos {
     width: calc(100% - 31rem);
@@ -116,5 +122,38 @@ div.project_view_wrapper {
       }
     }
     
+  }
+}
+
+
+div.projects_list_wrapper {
+  @extend %basicWrapStyle;
+  border: solid 2px palevioletred;
+  box-sizing: border-box;
+  div.projects_list {
+    width: 100%;
+    height: 40rem;
+    ul {
+      width: 2000px;
+      height: auto;
+      margin-top: 4.5rem;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: flex-start;
+      align-content: center;
+      gap: 4rem;
+      li {
+        width: 25rem;
+        height: 19rem;
+        background: #FFF;
+        box-shadow: 4px 4px 10px 4px rgba(0, 0, 0, 0.15);
+        &.selected {
+          border: 10px solid #F90;
+          transform: translateY(-10px);
+          box-shadow: none;
+        }
+      }
+    }
   }
 }
