--- a/css/main_section.css
+++ b/css/main_section.css
@@ -10,7 +10,7 @@ div#main_wrapper {
 div#main_wrapper .title {
   width: 100%;
   height: auto;
-  margin-top: 10rem;
+  margin-top: 15rem;
   text-align: center;
   border: solid 2px palevioletred;
   box-sizing: border-box;
@@ -20,4 +20,10 @@ div#main_wrapper .title p {
   line-height: 13.5625rem;
   letter-spacing: 1.0625rem;
   color: #003CFF;
+}
+
+@media screen and (max-width: 1500px) {
+  div#main_wrapper .title {
+    margin-top: 11rem;
+  }
 }
