--- a/scss/contact_footer.scss
+++ b/scss/contact_footer.scss
@@ -1,7 +1,7 @@
 @use 'common';
 
 div#skills_and_stacks_wrapper {
-  @extend %common.basicWrapStyle;
+  @extend %basicWrapStyle;
 
   // border: solid 2px red;
   // box-sizing: border-box;
@@ -28,6 +28,11 @@ div.footer_inner {
     align-content: center;
     li {
       font-size: 3rem;
+      cursor: pointer;
+      transition: all 0.2s ease-out;
+      &:hover {
+        transform: scale(1.1);
+      }
     }
   }
   p.f_copyright {
@@ -35,3 +40,59 @@ div.footer_inner {
     font: normal 1.25rem "Noto sans KR";
   }
 }
+
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1; 
+  left: 0;
+  top: 0;
+  width: 100%; 
+  height: 100%; 
+  overflow: auto; 
+  background-color: rgba(0,0,0,0.4);
+  transition: all 1s ease-out;
+  .modal-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border-radius : 10px ;
+    width : 50% ;
+    height: 50%;
+    position: relative;
+    left: 0;
+    top: 0;
+    transform: translateY(40%);
+
+    #close i {
+      color: #aaa ;
+      font-size: 2rem ;
+      float: right;
+      position: absolute;
+      right: 1rem;
+      top: 1rem;
+      cursor: pointer;
+      transition: all 0.1s ease-out;
+      &:hover {
+        color: black
+      }
+    }
+  }
+}
+
+div#content {
+  width: 100%;
+  height: 100%;
+  border: solid 2px palevioletred;
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-around;
+  align-content: center;
+  p {
+    font: normal 1.5rem "Noto sans KR";
+  }
+}
+
