--- a/scss/style.scss
+++ b/scss/style.scss
@@ -12,6 +12,11 @@ a{
   line-height: 0px;
   position: absolute;
 }
+
+html {
+  font-size: 16px;
+}
+
 body {
   width: 100%;
   height: auto;
@@ -57,4 +62,15 @@ html::-webkit-scrollbar-thumb {
 html::-webkit-scrollbar-track {
   width: 15px;
   background-color: whitesmoke;
+}
+
+@media screen and (max-width: 1024px) {
+  html {
+    font-size: 14px;
+  }
+}
+@media screen and (max-width: 768px) {
+  html {
+    font-size: 12px;
+  }
 }
