--- a/scss/style.scss
+++ b/scss/style.scss
@@ -15,12 +15,12 @@ a{
 
 html {
   font-size: 16px;
-  background: transparent;
 }
 
 body {
   width: 100%;
   height: auto;
+  background: white;
 }
 
 div#wrapper {
