--- a/scss/header.scss
+++ b/scss/header.scss
@@ -28,7 +28,9 @@ header {
       }
     }
     div.menu {
-      @extend %positionRelative;
+      position: relative;
+      left: 0;
+      top: 0;
       float: left;
       ul.menu_list {
         width: 30rem;
@@ -38,7 +40,9 @@ header {
         flex-direction: row;
         justify-content: space-between;
         align-content: center;
-        @extend %positionRelative;
+        position: relative;
+        left: 0;
+        top: 0;
         z-index: 1;
         li {
           font: normal 1rem "Dela Gothic One";
@@ -57,4 +61,71 @@ header {
       }
     }
   }
+}
+
+
+// 모바일
+@media screen and (max-width: 768px) {
+  header {
+    width: 100%;
+    position: fixed;
+    left: 0;
+    top: 1rem;
+    z-index: 100;
+    div#header_inner {
+      width: 100%;
+      height: 2rem;
+      margin: 0 auto;
+      padding: 0 1rem;
+      display: flex;
+      flex-wrap: wrap;
+      flex-direction: row;
+      justify-content: space-between;
+      align-content: center;
+      a {
+        width: 5rem;
+        height: 2rem;
+        float: left;
+        div#logo {
+          p {
+            font: normal 1.5rem/2rem "Permanent Marker";
+            color: #003CFF;
+          }
+        }
+      }
+      div.menu {
+        width: calc(100% - 10rem);
+        position: relative;
+        left: -3rem;
+        top: 0;
+        float: left;
+        ul.menu_list {
+          width: 100%;
+          height: 2rem;
+          display: flex;
+          flex-wrap: wrap;
+          flex-direction: row;
+          justify-content: space-between;
+          align-content: center;
+          z-index: 1;
+          li {
+            font: normal 1rem "Dela Gothic One";
+            cursor: pointer;
+            &.selected {
+  
+              color: white;
+            }
+          }
+        }
+        svg {
+          width: 55%;
+          position: absolute;
+          left: -12%;
+          top: 0.2rem;
+          z-index: 0;
+        }
+      }
+    }
+  }
+  
 }
