--- a/scss/main_section.scss
+++ b/scss/main_section.scss
@@ -4,15 +4,11 @@ div#main_wrapper {
   position: relative;
   left: 0;
   top: 0;
-  border: solid 2px blue;
-  box-sizing: border-box;
   .title {
     width: 100%;
     height: auto;
     margin-top: 15rem;
     text-align: center;
-    border: solid 2px palevioletred;
-    box-sizing: border-box;
     p {
       font: normal 12.5rem "Faster One";
       line-height: 13.5625rem;
@@ -20,11 +16,75 @@ div#main_wrapper {
       color: #003CFF;
     }
   }
+  div.bg_blues {
+    position: absolute;
+    left: 0;
+    top: -6rem;
+    svg {
+      position: absolute;
+      left: 0;
+      top: 0;
+      &:nth-child(1) {
+        top: -10rem;
+      }
+      &:nth-child(2) {
+        top: 0rem;
+      }
+      &:nth-child(3) {
+        top: 11rem;
+      }
+
+    }
+  }
 }
 
 @media screen and (max-width: 1500px) {
   div#main_wrapper .title {
     margin-top: 11rem;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  div#main_wrapper {
+    width: 100%;
+    height: 40rem;
+    position: relative;
+    left: 0;
+    top: 0;
+    .title {
+      width: 100%;
+      height: auto;
+      text-align: center;
+      position: absolute;
+      left: 0;
+      top: 7rem;
+      p {
+        font: normal 19vw "Faster One";
+        letter-spacing: 1.0625rem;
+        color: #003CFF;
+      }
+    }
+    div.bg_blues {
+      position: absolute;
+      left: -5rem;
+      top: -5rem;
+      svg {
+        width: 250px;
+        position: absolute;
+        left: 0;
+        top: 0;
+        &:nth-child(1) {
+          top: -8rem;
+        }
+        &:nth-child(2) {
+          top: 0rem;
+        }
+        &:nth-child(3) {
+          top: 9rem;
+        }
+
+      }
+    }
   }
 }
 
