--- a/css/basic_information_section.css
+++ b/css/basic_information_section.css
@@ -154,12 +154,18 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
 }
 
 @media screen and (max-width: 1200px) {
+  div#basic_information_wrapper {
+    height: 82rem;
+  }
   div#basic_information_wrapper .infos_wrapper div.my_pic {
     top: 30px;
     right: 30px;
   }
 }
 @media screen and (max-width: 1000px) {
+  div#basic_information_wrapper {
+    height: 82rem;
+  }
   div#basic_information_wrapper .infos_wrapper div.my_pic {
     top: 70px;
   }
@@ -167,7 +173,7 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
 @media screen and (max-width: 768px) {
   div#basic_information_wrapper {
     width: 100%;
-    height: 72rem;
+    height: 92rem;
     position: relative;
     left: 0;
     top: 0;
@@ -303,22 +309,23 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
     font: normal 9.375rem "Dela Gothic One";
   }
 }
-@media screen and (max-width: 768px) {
+@media screen and (max-width: 425px) {
   div#basic_information_wrapper {
     width: 100%;
-    height: 72rem;
+    height: 110rem;
     position: relative;
     left: 0;
     top: 0;
   }
   div#basic_information_wrapper svg {
+    width: 7000px;
     position: absolute;
-    left: 0;
+    left: -4000px;
     top: 0;
     z-index: -1;
   }
   div#basic_information_wrapper .infos_wrapper {
-    max-width: 1200px;
+    width: 100%;
     height: 33rem;
     margin: 0 auto;
     height: auto;
@@ -330,13 +337,16 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
     z-index: 1;
   }
   div#basic_information_wrapper .infos_wrapper div.info {
-    width: calc(50% - 30px);
+    width: 100%;
+    margin: 0 auto;
     height: 33rem;
     position: absolute;
-    left: 0;
-    top: 0;
+    left: -1.3rem;
+    top: 17rem;
   }
   div#basic_information_wrapper .infos_wrapper div.info ul.info_list {
+    width: 80vw;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
@@ -345,7 +355,7 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
     gap: 3rem;
   }
   div#basic_information_wrapper .infos_wrapper div.info ul.info_list li {
-    width: 100%;
+    width: 50%;
   }
   div#basic_information_wrapper .infos_wrapper div.info ul.info_list li:hover p.title::before {
     transform: scale(1.2);
@@ -387,15 +397,15 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
   }
   div#basic_information_wrapper .infos_wrapper div.my_pic {
     width: 90vw;
+    margin: 0 auto;
     height: 132.66vw;
     position: absolute;
-    right: 20px;
-    top: 70px;
-    display: flex;
-    align-content: center;
+    left: 5vw;
+    top: -18rem;
   }
   div#basic_information_wrapper .infos_wrapper div.my_pic img {
     width: 90vw;
+    margin: 0 auto;
     height: 132.66vw;
     -o-object-fit: contain;
        object-fit: contain;
@@ -404,12 +414,12 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
     top: 0;
   }
   div#basic_information_wrapper .infos_wrapper div.my_pic .img_blue_cover {
-    width: calc(90vw - 40px);
+    width: calc(85vw - 30px);
     height: calc(132.66vw - 40px);
     background: #003CFF;
     mix-blend-mode: lighten;
     position: absolute;
-    left: 20px;
+    left: 15px;
     top: 20px;
     z-index: 3;
   }
@@ -422,7 +432,7 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
     filter: progid:DXImageTransform.Microsoft.gradient( startColorstr="#ff9900", endColorstr="#00ff9900",GradientType=0 );
     position: absolute;
     left: 5rem;
-    top: -9rem;
+    top: 45rem;
     z-index: -1;
   }
   div#basic_information_wrapper .bi_bg_line_blue {
@@ -434,11 +444,11 @@ div#basic_information_wrapper .bi_bg_text_yellow p {
     width: 100%;
     height: auto;
     position: relative;
-    top: 15rem;
+    top: 10rem;
     text-align: center;
   }
   div#basic_information_wrapper .bi_bg_text_yellow p {
     color: rgba(255, 153, 0, 0.2);
-    font: normal 9.375rem "Dela Gothic One";
+    font: normal 20vw/25vw "Dela Gothic One";
   }
 }
